--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.rfms.enchain</groupId>
+    <groupId>com.rfms</groupId>
     <artifactId>enchain</artifactId>
     <version>0.1.0</version>
 
@@ -27,5 +27,13 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>Enchain</name>
+            <url>https://maven.pkg.github.com/irfans18/enchain</url>
+        </repository>
+    </distributionManagement>
 
 </project>
